Image editor - crash to desktop with changing the threshold for extract palette #78136

Closed
opened 2020-06-22 19:04:05 +02:00 by Reiner Prokein · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-21 01:51, hash: b4ba27f026
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes to desktop when changing the threshold value for extract palette in its adjust last operator panel.

Exact steps for others to reproduce the error

Open Blender
Render image
In the Image menu choose extract palette
In the adjust last operation panel try to change the threshold
Blender will crash to desktop.

2020-06-22 19-01-30.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 446.14 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-21 01:51, hash: `b4ba27f026` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes to desktop when changing the threshold value for extract palette in its adjust last operator panel. **Exact steps for others to reproduce the error** Open Blender Render image In the Image menu choose extract palette In the adjust last operation panel try to change the threshold Blender will crash to desktop. [2020-06-22 19-01-30.mp4](https://archive.blender.org/developer/F8637246/2020-06-22_19-01-30.mp4)
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

BKE_image_acquire_ibuf(image, &iuser, &lock); returned NULL.

palette_extract_img_exec(bContext * C, wmOperator * op) Line 329	C
wm_operator_exec(bContext * C, wmOperator * op, const bool repeat, const bool store) Line 999	C
WM_operator_repeat(bContext * C, wmOperator * op) Line 1075	C
ED_undo_operator_repeat(bContext * C, wmOperator * op) Line 604	C
ED_undo_operator_repeat_cb_evt(bContext * C, void * arg_op, int UNUSED_arg_event) Line 639	C
ui_apply_but_funcs_after(bContext * C) Line 931	C
ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10785	C
wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 622	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2743	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2854	C
wm_event_do_handlers(bContext * C) Line 3283	C
WM_main(bContext * C) Line 478	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 534	C
`BKE_image_acquire_ibuf(image, &iuser, &lock);` returned `NULL`. ``` palette_extract_img_exec(bContext * C, wmOperator * op) Line 329 C wm_operator_exec(bContext * C, wmOperator * op, const bool repeat, const bool store) Line 999 C WM_operator_repeat(bContext * C, wmOperator * op) Line 1075 C ED_undo_operator_repeat(bContext * C, wmOperator * op) Line 604 C ED_undo_operator_repeat_cb_evt(bContext * C, void * arg_op, int UNUSED_arg_event) Line 639 C ui_apply_but_funcs_after(bContext * C) Line 931 C ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 10785 C wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 622 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2743 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2854 C wm_event_do_handlers(bContext * C) Line 3283 C WM_main(bContext * C) Line 478 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 534 C ```
Antonio Vazquez self-assigned this 2020-06-22 19:49:42 +02:00

This issue was referenced by 73d3f51c16

This issue was referenced by 73d3f51c16972d23b70d31c88786d7e3b37e7ff8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78136
No description provided.