Fix T78136: Image editor - crash to desktop with changing the threshold for extract palette

Also fixed the same error in generate GPencil object from image.

The problem was the Render Result image hasn't  ibuf.